feat: support WeChat login and scan check-in
